--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,41 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Badge from '../components/Badge.astro'
+import Layout from '../layouts/Layout.astro';           
+import Badge from '../components/Badge.astro';
+import LinkedIn from '../components/icons/LinkedIn.astro';
+import Social from '../components/Social.astro';
+import GitHub from '../components/icons/GitHub.astro';
+import Mail from '../components/icons/Mail.astro';
 ---
 
-<Layout title="Page">
+<Layout title="AriSoph Porfolio - Desarolladora y Programadora Web">
 	<main >
 
         <section class="w-full lg:w-[740px] mx-auto py-44">
-            <h1 class="text-white font-bold flex justify-center text-5xl gap-x-4 pb-4">Hey, soy AriDev
-                 <a class="flex justify-center items-center" 
+            <h1 class="text-white font-bold flex justify-center text-5xl gap-x-4 pb-10 flex flex-row">Hey, soy AriDev
+            <a class="flex justify-center items-center"    
                  href="https://www.linkedin.com/in/frank-mu%C3%B1oz-large-621aa8252/"
                  target="_blank"
                  rel="noopener"
                  ><Badge>Disponible para trabajar</Badge></a></h1>
-            <h2 class="text-xl opacity-80">Tengo experiencia en desarrollo web y front end. De Santa Marta, Colombia.
-                 me expecializo en crear aplicaciones web y aplicaciones moviles.</h2>
+            <h2 class="text-xl text-wrap"> 
+                <span class="opacity-80">Tengo experiencia en desarrollo web y front end. </span><span class="text-pink-300">De Santa Marta, Colombia.</span>
+                <span class="opacity-80">me expecializo en crear aplicaciones web y aplicaciones moviles.</span></h2>
+
+                    <nav class="flex gap-x-4 mt-8">
+                        <Social href="https://www.linkedin.com/in/frank-mu%C3%B1oz-large-621aa8252/">
+                            <LinkedIn class="w-6 h-6 "/>
+                            LinkedIn
+                        </Social>
+                        <Social href="https://github.com/AriSophDev">
+                            <GitHub class="w-6 h-6"></GitHub>
+                            GitHub
+                        </Social>
+                        <Social href="mailto:sophialarge57@gmail.com">
+                            <Mail class="w-6 h-6"></Mail>
+                            Mail
+                        </Social>
+                    </nav>
+                
         </section>
        
     </main>
