--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,9 @@ import GitHub from '../components/icons/GitHub.astro';
 import Mail from '../components/icons/Mail.astro';
 ---
 
-<Layout title="AriSoph Porfolio - Desarolladora y Programadora Web">
+<Layout title="AriSoph Porfolio - Desarolladora y Programadora Web"
+description=""
+>
 	<main >
 
         <section class="w-full lg:w-[740px] mx-auto py-44">
