--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ import Mail from '../components/icons/Mail.astro';
 ---
 
 <Layout title="AriSoph Porfolio - Desarolladora y Programadora Web"
-description=""
+description="Descubre el portfolio de Arian Sophia, una desarrolladora web talentosa y creativa. Especializada en diseño y 
+desarrollo de sitios web personalizados y optimizados, AriDev ofrece soluciones innovadoras para empresas y particulares. 
+Con un enfoque en la experiencia del usuario y el rendimiento, cada proyecto refleja un compromiso con la calidad y la excelencia. 
+¿Buscas una desarrolladora web que transforme tus ideas en realidad? Visita el portfolio de AriDev y comienza tu proyecto hoy mismo."
 >
 	<main >
 
