--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,10 +2,10 @@
 <img class="rounded-full w-12 h-12" src="https://www.instagram.com/p/Cs-N0rOOD3F/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" alt="Logo" srcset="" />
 
 <nav class="flex flex-row gap-x-10 opacity-80">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/contact">Contact</a>
-    <a href="/portfolio">Projects</a>
+    <a href="#top">Inicio</a>
+    <a href="#about">Sobre Mi</a>
+    <a href="#contact">Contacto</a>
+    <a href="#portfolio">Proyectos</a>
 </nav>
 
 
