--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { description, title } = Astro.props;
 <style is:global>
 
 	:root {
-		color-scheme: dark light;
+		color-scheme: dark;
 	}
 	
 	html {
