--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,31 @@
 ---
 import Layout from '../layouts/Layout.astro';           
-import Badge from '../components/Badge.astro';
-import LinkedIn from '../components/icons/LinkedIn.astro';
-import Social from '../components/Social.astro';
-import GitHub from '../components/icons/GitHub.astro';
-import Mail from '../components/icons/Mail.astro';
 import Sectioncontainer from '../components/Sectioncontainer.astro';
+import Hero from '../components/Hero.astro';
+import CodeIcon from '../components/icons/Code.astro'
 ---
 
 <Layout title="AriSoph Porfolio - Desarolladora y Programadora Web" 
 description="Descubre el portfolio de Arian Sophia, una desarrolladora web talentosa y creativa. Especializada en diseño y desarrollo de sitios web personalizados y optimizados, AriDev ofrece soluciones innovadoras para empresas y particulares. Con un enfoque en la experiencia del usuario y el rendimiento, cada proyecto refleja un compromiso con la calidad y la excelencia. ¿Buscas una desarrolladora web que transforme tus ideas en realidad? Visita el portfolio de AriDev y comienza tu proyecto hoy mismo.">
-	<main>
-    
+	<main class="px-4">
+    <Sectioncontainer>
+        <Hero>
+            <slot/>
+        </Hero>
+    </Sectioncontainer>
+
+
+   <div class="space-y-24">
+    <Sectioncontainer id="proyectos">
+        <h2
+        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+      >
+        <CodeIcon class="size-7" />
+        Proyectos
+      </h2>
+      <Projects />
+    </Sectioncontainer>
+   </div>
     </main>
 </Layout>
 
