add project component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Sectioncontainer from '../components/Sectioncontainer.astro';
 import Hero from '../components/Hero.astro';
 import CodeIcon from '../components/icons/Code.astro'
+import Projects from '../components/Proyectos.astro'
 ---
 
 <Layout title="AriSoph Porfolio - Desarolladora y Programadora Web" 
