--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,4 @@
-<header class=" flex justify-between item-center py-5 w-[1120px] mx-auto">
-<img class="rounded-full w-12 h-12" src="https://www.instagram.com/p/Cs-N0rOOD3F/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" alt="Logo" srcset="" />
+<header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2">
 
 <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="#top">Inicio</a>
