--- a/src/components/Sectioncontainer.astro
+++ b/src/components/Sectioncontainer.astro
@@ -1,10 +1,14 @@
 ---
-const {class: classname, id } = Astro.props
+const {class: className, id } = Astro.props
 ---
 
 
 
-<section class={'w-full mx-auto lg:w-[740px] ${classname}'}>
-    <slot/> 
 
+<section
+  id={id}
+  data-section={id}
+  class={`section ${className} scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl`}
+>
+  <slot />
 </section>
