--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Projects from '../components/Proyectos.astro'
 <Layout title="AriSoph Porfolio - Desarolladora y Programadora Web" 
 description="Descubre el portfolio de Arian Sophia, una desarrolladora web talentosa y creativa. Especializada en diseño y desarrollo de sitios web personalizados y optimizados, AriDev ofrece soluciones innovadoras para empresas y particulares. Con un enfoque en la experiencia del usuario y el rendimiento, cada proyecto refleja un compromiso con la calidad y la excelencia. ¿Buscas una desarrolladora web que transforme tus ideas en realidad? Visita el portfolio de AriDev y comienza tu proyecto hoy mismo.">
 	<main class="px-4">
-    <Sectioncontainer>
+    <Sectioncontainer class="py-16 md:py-36">
         <Hero>
             <slot/>
         </Hero>
@@ -21,7 +21,7 @@ description="Descubre el portfolio de Arian Sophia, una desarrolladora web talen
         <h2
         class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
       >
-        <CodeIcon class="size-7" />
+        <CodeIcon class="size-8" />
         Proyectos
       </h2>
       <Projects />
