--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,9 +21,7 @@ const { description, title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="">
-		<div class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-gray-950
-		bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
-		dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
+		<div class="absolute top-0 z-[-2] h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"></div>
 		<Header />
 		<slot />
 	</body>
