add profile img

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,6 +4,7 @@ import LinkedIn from "./icons/LinkedIn.astro";
 import Social from "./Social.astro";
 import GitHub from "./icons/GitHub.astro";
 import Mail from "./icons/Mail.astro";
+import Sophimage from './Image/Sophimage.jpg'
 
 
 const personalImageAlt = "Sophimage"
@@ -15,7 +16,7 @@ const personalImageAlt = "Sophimage"
     <div class="flex gap-4 mb-4">
       <img
         class="rounded-full shadow-lg size-16"
-        src="/Image/Sophimage"
+        src={Sophimage.src}
         alt={personalImageAlt}
       />
       <a
