--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -33,8 +33,8 @@ const PROJECTS = [
     description:
       "Applicacion de Clima con javascript y API de OpenWeatherMap ",
     link: "https://github.com/AriSophDev/BIT-AI.git",
-    image: "",
-    tags: [TAGS.],
+    image: "https://cdn3.f-cdn.com/files/download/224643473/10shots_so.png",
+    tags: [TAGS.JAVASCRIPT],
   },
 ]
 ---
