--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -17,16 +17,17 @@ const TAGS = {
     class: "bg-yellow-500 text-black",
     icon: JavaScript,
   },
+
 }
 const PROJECTS = [
   {
     title: "Sitio web para emprendimiento de Software",
     description:
-      "Sitio web para emprendimiento de Software y diseño ",
+      "Sitio web para emprendimiento de Software y diseño echo con el framework Astro.js y Tailwind CSS ",
     link: "https://stack-col-lye23qwxn-arisophdevs-projects.vercel.app/#",
     github: "https://github.com/pheralb/svgl",
     image: "https://cdn6.f-cdn.com/files/download/224643932/682shots_so.png",
-    tags: [TAGS.TAILWIND],
+    tags: [TAGS.TAILWIND , TAGS.JAVASCRIPT],
   },
   {
     title: "Weather app",
