--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -33,10 +33,12 @@ const PROJECTS = [
     title: "Weather app",
     description:
       "Applicacion de Clima con javascript y API de OpenWeatherMap ",
-    link: "https://github.com/AriSophDev/BIT-AI.git",
+    link: "https://github.com/AriSophDev/weather-App/deployments/github-pages",
+    github: "https://github.com/AriSophDev/weather-App",
     image: "https://cdn3.f-cdn.com/files/download/224643473/10shots_so.png",
     tags: [TAGS.JAVASCRIPT],
   },
+  
 ]
 ---
 
