fix "white mode"

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,19 +29,20 @@ const personalImageAlt = "Sophimage"
       </a>
     </div>
     <h1
-      class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
+      class="text-4xl font-bold tracking-tight text-white sm:text-5xl "
     >
       Hey, soy AriSophDev.
     </h1>
     <p
-      class="mt-6 text-xl text-gray-600 dark:[&>strong]:text-pink-200 [&>strong]:font-semibold dark:text-gray-300"
-    >
-     <strong
-        >Desarrolladora TFem Front End y Estudiante de Diseño Digital </strong
-      > Santa Marta, Colombia. Especializada en el desarrollo de aplicaciones web
-        únicas.
-    </p>
-    <nav class="flex flex-wrap gap-4 mt-8">
+    class="mt-6 text-xl text-blue-300 [&>strong]:text-pink-300 [&>strong]:font-semibold"
+  >
+    2 años de experiencia. <strong
+      >Desarrolladora Front End </strong
+    > de Santa Marta, Colombia. Especializada en el desarrollo de aplicaciones web
+    únicas.
+  </p>
+
+    <nav class="flex flex-wrap gap-4 mt-8 text-white">
       <Social href="mailto:Sophialarge@gmail.com">
         <Mail class="size-4" />
         Contáctame
