--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ description="Descubre el portfolio de Arian Sophia, una desarrolladora web talen
    <div class="space-y-24">
     <Sectioncontainer id="proyectos">
         <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white "
       >
         <CodeIcon class="size-8" />
         Proyectos
