--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2">
 
-<nav class="flex flex-row gap-x-10 opacity-80">
+<nav class="flex flex-row gap-x-10 opacity-80 text-white">
     <a href="#top">Inicio</a>
     <a href="#about">Sobre Mi</a>
     <a href="#contact">Contacto</a>
