--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -1,22 +1,21 @@
-<article class="flex flex-col items-center justify-center gap-8 text-blue-300 md:flex-row">
+<article class="flex flex-col items-center justify-center gap-8 text-white md:flex-row">
     <div
-      class="[&>p]:mb-4 [&>p>strong]:text-pink-500 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
+      class="[&>p]:mb-4 [&>p>strong]:text--500 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
     >
       <p>
         ¡Hola! Soy Arian Sophia, una apasionada desarrolladora web con un enfoque en crear experiencias 
         digitales únicas y funcionales. Con varios años de experiencia en el desarrollo 
-        y diseño de sitios web, <strong
-          >me especializo en transformar ideas en realidad a 
-          través de soluciones personalizadas y adaptadas a las necesidades de cada cliente.</strong
-        >.
+        y diseño de sitios web,
+          me especializo en transformar ideas en realidad a 
+          través de soluciones personalizadas y adaptadas a las necesidades de cada cliente.
       </p>
   
       <p>
-        Algunos de mis éxitos incluyen <strong
-          >Mi camino en el desarrollo web comenzó con un profundo interés por la tecnología y el diseño.
+        Algunos de mis éxitos incluyen 
+          Mi camino en el desarrollo web comenzó con un profundo interés por la tecnología y el diseño.
            Desde entonces, he perfeccionado mis habilidades en una amplia gama de tecnologías y herramientas,
-            </strong
-        >. incluyendo HTML, CSS, JavaScript, y frameworks como React 
+        
+        incluyendo HTML, CSS, JavaScript, y frameworks como React 
       </p>
   
     </div>
