update stack col github link

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -25,7 +25,7 @@ const PROJECTS = [
     description:
       "Sitio web para emprendimiento de Software y diseño echo con el framework Astro.js y Tailwind CSS ",
     link: "https://stack-col-web.vercel.app/",
-    github: "https://github.com/pheralb/svgl",
+    github: "https://github.com/AriSophDev/StackCol-web.git",
     image: "https://cdn6.f-cdn.com/files/download/224643932/682shots_so.png",
     tags: [TAGS.TAILWIND , TAGS.JAVASCRIPT],
   },
