update link weather app

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -33,7 +33,7 @@ const PROJECTS = [
     title: "Weather app",
     description:
       "Applicacion de Clima con javascript y API de OpenWeatherMap ",
-    link: "https://github.com/AriSophDev/weather-App/deployments/github-pages",
+    link: "https://arisophdev.github.io/weather-App/",
     github: "https://github.com/AriSophDev/weather-App",
     image: "https://cdn3.f-cdn.com/files/download/224643473/10shots_so.png",
     tags: [TAGS.JAVASCRIPT],
